<resources>
    <string name="app_name">TodoTask</string>
    <string name="today_nschedule">Today\nSchedule</string>
    <string name="s_task_today">%s Task today</string>
    <string name="home">Home</string>
    <string name="proceeding">Proceeding</string>
    <string name="done">Done</string>
    <string name="create_task">Create Task</string>
    <string name="task_title">Task title</string>
    <string name="date">Date</string>
    <string name="time">Time</string>
    <string name="alarm">Alarm</string>
    <string name="update_task">Update Task</string>
</resources>