<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    style="@style/backStyle"
    tools:context=".ui.EditTaskActivity">


    <LinearLayout
        style="@style/screenStyle"
        android:padding="12dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_vertical">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:padding="9dp"
                android:rotation="180"
                android:src="@drawable/ic_next"
                tools:ignore="ContentDescription" />

            <TextView
                style="@style/boldTextStyle"
                android:layout_marginStart="20dp"
                android:fontFamily="@font/roboto_medium"
                android:text="@string/create_task"
                android:textColor="@color/color_black"
                android:textSize="22sp" />

        </LinearLayout>

        <TextView
            style="@style/boldTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/task_title" />

        <EditText
            android:id="@+id/nameEdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_card"
            android:drawableStart="@drawable/ic_task"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto"
            android:hint="Type here"
            android:importantForAutofill="no"
            android:inputType="text"
            android:paddingHorizontal="10dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_hint"
            android:textSize="14sp" />

        <TextView
            style="@style/boldTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/date" />

        <TextView
            android:id="@+id/dateEdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_card"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:hint="05 June 2021"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_hint"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_task" />

        <TextView
            style="@style/boldTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/time" />

        <TextView
            android:id="@+id/timeEdt"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_card"
            android:drawablePadding="8dp"
            android:fontFamily="@font/roboto"
            android:hint="12.00 AM"
            android:gravity="center_vertical"
            android:paddingHorizontal="10dp"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_hint"
            android:textSize="14sp"
            app:drawableStartCompat="@drawable/ic_task" />

        <TextView
            style="@style/boldTextStyle"
            android:layout_marginTop="20dp"
            android:text="@string/alarm" />

        <Spinner
            android:id="@+id/alarmSpinner"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:layout_marginTop="8dp"
            android:background="@drawable/rounded_white_card"
            android:fontFamily="@font/roboto"
            android:textColor="@color/color_black"
            android:textColorHint="@color/color_hint"
            android:textSize="14sp" />

        <TextView
            android:id="@+id/createTask"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="50dp"
            android:background="@drawable/rounded_primary_shadow_card"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="@string/create_task"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

        <TextView
            android:id="@+id/deleteTask"
            android:visibility="gone"
            android:layout_width="match_parent"
            android:layout_height="70dp"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:background="@drawable/rounded_red_shadow_card"
            android:fontFamily="@font/roboto_medium"
            android:gravity="center"
            android:text="Delete task"
            android:textColor="@color/color_white"
            android:textSize="16sp" />

    </LinearLayout>
</androidx.core.widget.NestedScrollView>